tests/ui/static/issue-24446.stderr
error[E0277]: the size for values of type `(dyn Fn() -> u32 + 'static)` cannot be known at compilation time
  --> $DIR/issue-24446.rs:2:5
   |
LL |     static foo: dyn Fn() -> u32 = || -> u32 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Fn() -> u32 + 'static)`
   = note: statics and constants must have a statically known size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
